--- a/resources/sass/stories.scss
+++ b/resources/sass/stories.scss
@@ -83,9 +83,13 @@ input{
     }
 }
 
+.col-md-8{
+    height: 100%;
+}
+
 .vertical-scrollable {
     //position: absolute;
-    height: 100%;
+    height: 70%;
     overflow-y: scroll; 
   }
 
@@ -134,3 +138,5 @@ hr{
     width: 60%;
 
 }
+
+#mapid { height: 500px; }
