--- a/public/css/stories.css
+++ b/public/css/stories.css
@@ -118,7 +118,7 @@ input:focus {
 }
 .story-drawer i {
   margin-top: 15px;
-  font-size: 30px;
+  font-size: 28px;
   color: grey;
   margin-left: 14px;
   transition: 0.3s;
@@ -130,6 +130,7 @@ input:focus {
 
 .active {
   background: #74b9ff;
+  cursor: pointer;
 }
 
 hr {
@@ -137,21 +138,42 @@ hr {
   width: 60%;
 }
 
-.btn {
-  background-color: transparent;
-  height: 30px;
-  width: 30px;
+/*.btn {
+    background-color: transparent;
+    height: 30px;
+    width: 30px;
+    border: none;
+    color: orange;
+    padding: 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 6px 2px;
+    vertical-align: middle;
+    }
+*/
+.btn-orange {
+  background-color: orange;
+  color: white;
   border: none;
-  color: orange;
-  padding: 20px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  margin: 6px 2px;
-  vertical-align: middle;
+}
+.btn-orange:hover {
+  background-color: #ff7b00;
+  cursor: pointer;
+  color: white;
+}
+.btn-orange:active, .btn-orange:focus {
+  background-color: orange;
+  border: none;
+  color: white;
 }
 
 #mapid {
   height: 500px;
+}
+
+.w-100 {
+  width: 100% !important;
+  height: 90vh;
 }
