--- a/public/css/stories.css
+++ b/public/css/stories.css
@@ -170,10 +170,15 @@ hr {
 }
 
 #mapid {
-  height: 500px;
+  height: 520px;
 }
 
 .w-100 {
   width: 100% !important;
   height: 90vh;
+}
+
+.name {
+  margin-left: 10px;
+  font-weight: 400;
 }
